# estudos-C

./: .gitignore  CMakeLists.txt  Conceitos Base.c  ex_1.c  ex_2.c
Exercicios/: Equacao2grau.c
Exercicios/Lista_ex_1/: ex_1.c  ex_2.c  ex_3.c  ex_4.c
Exercicios/Lista_ex_2/: ex4.c  ex_1.c  ex_2.c
Exercicios/Lista_ex_3/: ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c
Exercicios/Lista_ex_4/: ex1.c  ex2.c  ex3.c  ex4.c
